2002-11-10  John Levon  <levon@movementarian.org>

	* configure.in:
	* gui/Makefile.am:
	* oprof_report/Makefile.am: only use X libs where
	  they're actually wanted
 
2002-11-10  John Levon  <levon@movementarian.org>

	* configure.in: make included sstream work again
 
2002-11-08  Will Cohen  <wcohen@redhat.com>

	* doc/oprofile.xml: Update with IA64 information.

2002-11-10  John Levon  <levon@movementarian.org>

	* Makefile.am: remove oprof_report from SUBDIRS to
	  avoid separate objdir problem
 
2002-11-10  John Levon  <levon@movementarian.org>

	* most Makefile.am: do the dist_sources trick
	  properly
 
2002-11-10  John Levon  <levon@movementarian.org>

	* Makefile.am:
	* configure.in:
	* dae/Makefile.am:
	* daemon/Makefile.am:
	* utils/Makefile.am: s/WITH_KERNEL_SUPPORT/kernel_support

	* configure.in:
	* dae/Makefile.am:
	* dae/oprofiled.c:
	* daemon/Makefile.am:
	* daemon/oprofiled.c:
	* libabi/Makefile.am: approximate working --enable-abi more

2002-11-10  John Levon  <levon@movementarian.org>

	* dae/oprofiled.c:
	* daemon/oprofiled.c: abi tidy
 
2002-11-10  John Levon  <levon@movementarian.org>

	* autogen.sh: be verbose
 
	* gui/Makefile.am:
	* gui/ui/Makefile.am:
	* oprof_report/Makefile.am:
	* oprof_report/ui/Makefile.am: remove duplicate
	  set MOC/UIC
 
2002-11-10  John Levon  <levon@movementarian.org>

	* Makefile.am: add comment

	* configure.in: no need to subst OPROFILE_25
 
2002-11-09  John Levon  <levon@movementarian.org>

	* TODO: update
 
	* configure.in:
	* most Makefile.am: make separate objdir work,
	  except for module (impossible I suppose)

2002-11-09  John Levon  <levon@movementarian.org>

	* autogen.sh: use --foreign
 
2002-11-09  John Levon  <levon@movementarian.org>

	* configure.in: fix --with-kernel-support
 
	* doc/.cvsignore: add *.1

	* libabi/Makefile.am: don't install abi_test
 
2002-11-09  John Levon  <levon@movementarian.org>

	* all cvsignore: add Makefile.in
 
	* gui/Makefile.am: move EXTRA_DIST out of qt check
