@@ -6,15 +6,19 @@ dist_sources = opd_stats.c opd_kernel.c opd_proc.c opd_image.c opd_mapping.c \
 EXTRA_DIST = $(dist_sources)
 
 if !kernel_support
+ 
 AM_CPPFLAGS=-I ${top_srcdir}/libabi -I ${top_srcdir}/libutil -I ${top_srcdir}/libop -I ${top_srcdir}/libdb
 
 bin_PROGRAMS = oprofiled
 
-oprofiled_SOURCES = $(dist_sources)
-
 if enable_abi
+CLEANFILES = dummy.cpp
+dummy.cpp:
+	echo "static void dummy_crap_to_force_cxx_link() {}" >$@
+oprofiled_SOURCES = $(dist_sources) dummy.cpp
 oprofiled_LDADD = ../libabi/libabi.a ../libdb/libdb.a ../libop/libop.a ../libutil/libutil.a
 else
+oprofiled_SOURCES = $(dist_sources)
 oprofiled_LDADD = ../libdb/libdb.a ../libop/libop.a ../libutil/libutil.a
 endif
 
